@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-       Copyright 2018-2022 the original author or authors.
+       Copyright 2018-2024 the original author or authors.
 
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
@@ -22,18 +22,17 @@
   <parent>
     <groupId>org.mybatis</groupId>
     <artifactId>mybatis-parent</artifactId>
-    <version>36</version>
+    <version>48</version>
     <relativePath />
   </parent>
 
   <groupId>org.mybatis.scripting</groupId>
   <artifactId>mybatis-thymeleaf</artifactId>
-  <version>1.0.5-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <version>1.1.1-SNAPSHOT</version>
 
   <name>MyBatis Thymeleaf</name>
   <description>Thymeleaf support for MyBatis</description>
-  <url>https://github.com/mybatis/thymeleaf-scripting</url>
+  <url>https://github.com/mybatis/thymeleaf-scripting/</url>
 
   <inceptionYear>2018</inceptionYear>
 
@@ -45,10 +44,10 @@
   </contributors>
 
   <scm>
-    <url>https://github.com/mybatis/thymeleaf-scripting</url>
-    <connection>scm:git:ssh://github.com/mybatis/thymeleaf-scripting.git</connection>
+    <connection>scm:git:ssh://git@github.com/mybatis/thymeleaf-scripting.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/mybatis/thymeleaf-scripting.git</developerConnection>
     <tag>HEAD</tag>
+    <url>https://github.com/mybatis/thymeleaf-scripting/</url>
   </scm>
   <issueManagement>
     <system>GitHub</system>
@@ -60,26 +59,32 @@
   </ciManagement>
   <distributionManagement>
     <site>
-      <id>gh-pages</id>
+      <id>gh-pages-scm</id>
       <name>MyBatis Thymeleaf GitHub Pages</name>
-      <url>git:ssh://git@github.com/mybatis/thymeleaf-scripting.git?gh-pages#</url>
+      <url>scm:git:ssh://git@github.com/mybatis/thymeleaf-scripting.git</url>
     </site>
   </distributionManagement>
 
   <properties>
+    <!-- Maven compiler options -->
+    <java.version>11</java.version>
+    <java.release.version>11</java.release.version>
+
     <!-- Dependencies artifact version -->
-    <mybatis.version>3.5.11</mybatis.version>
-    <thymeleaf.version>3.1.1.RELEASE</thymeleaf.version>
+    <mybatis.version>3.5.18</mybatis.version>
+    <thymeleaf.version>3.1.3.RELEASE</thymeleaf.version>
 
     <!-- Dependencies plugin version -->
-    <asciidoctor-maven-plugin.version>2.2.2</asciidoctor-maven-plugin.version>
+    <asciidoctor-maven-plugin.version>3.1.1</asciidoctor-maven-plugin.version>
 
     <!-- Dependencies plugin settings -->
     <module.name>org.mybatis.scripting.thymeleaf</module.name>
     <clirr.comparisonVersion>1.0.0</clirr.comparisonVersion>
 
     <!-- Reproducible Builds -->
-    <project.build.outputTimestamp>1669305733</project.build.outputTimestamp>
+    <project.build.outputTimestamp>1727226406</project.build.outputTimestamp>
+
+    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
   </properties>
 
   <dependencies>
@@ -87,8 +92,8 @@
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
       <version>${mybatis.version}</version>
-      <optional>true</optional>
       <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.thymeleaf</groupId>
@@ -99,31 +104,31 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.9.1</version>
+      <version>5.11.4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <version>2.7.1</version>
+      <version>2.7.4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>2.1.214</version>
+      <version>2.3.232</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.4.5</version>
+      <version>1.5.15</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
-      <version>5.3.24</version>
+      <version>6.2.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -157,10 +162,10 @@
         <executions>
           <execution>
             <id>generate-html</id>
-            <phase>generate-resources</phase>
             <goals>
               <goal>process-asciidoc</goal>
             </goals>
+            <phase>generate-resources</phase>
           </execution>
         </executions>
       </plugin>
